--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,20 @@
     background-color: #202020;
 }
 
+/* .abc {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+} */
+
+.histroy {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+}
+
+.abcd,
+.flex {
+    display: flex;
+}
