--- a/src/components/CapturedPieces/CapturedPieces.css
+++ b/src/components/CapturedPieces/CapturedPieces.css
@@ -3,7 +3,7 @@
   padding: 10px;
   border-radius: 5px;
   margin: 10px;
-  min-height: 100px;
+  min-height: 200px;
 }
 
 .white-captured {
@@ -28,6 +28,7 @@
   flex-wrap: wrap;
   gap: 5px;
   justify-content: center;
+  width: 140px;
 }
 
 .captured-piece {
