--- a/src/components/MoveHistory/MoveHistory.css
+++ b/src/components/MoveHistory/MoveHistory.css
@@ -3,9 +3,9 @@
   background-color: #f0f0f0;
   padding: 10px;
   border-radius: 5px;
-  max-height: 600px;
+  height: 70vh;
   overflow-y: auto;
-  width: 200px;
+  width: 150px;
 }
 
 .move-history h3 {
@@ -15,7 +15,7 @@
 
 .moves-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
 }
 
 .move {
@@ -41,4 +41,8 @@
 .black-move {
   background-color: #333333;
   color: #ffffff;
+}
+
+.ms-1 {
+  margin-left: 20px;
 }
